another test of spacing text in LaTex - using \,\, on all text in blue

--- a/2. The Mathematical Building Blocks of Deep Learning.ipynb
+++ b/2. The Mathematical Building Blocks of Deep Learning.ipynb
@@ -199,11 +199,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The core building block of neural networks is the $\\color{blue}{\\textbf{layer}}$. You can think of a layer as a filter for data: some data goes in, and it comes out in a more useful form. Specifically, layers extract $\\color{blue}{\\textbf{representations}}$ out of the data fed into them—hopefully, representations that are more meaningful for the problem at hand. Most of deep learning consists of chaining together simple layers that will implement a form of progressive $\\color{blue}{\\textbf{data distillation}}$. A deep-learning model is like a sieve for data processing, made of a succession of increasingly refined data filters—the layers.<br><br>\n",
+    "The core building block of neural networks is the $\\color{blue}{\\textbf{layer}}$. You can think of a layer as a filter for data: some data goes in, and it comes out in a more useful form. Specifically, layers extract $\\color{blue}{\\textbf{representations}}$ out of the data fed into them—hopefully, representations that are more meaningful for the problem at hand. Most of deep learning consists of chaining together simple layers that will implement a form of progressive $\\color{blue}{\\textbf{data \\,\\,distillation}}$. A deep-learning model is like a sieve for data processing, made of a succession of increasingly refined data filters—the layers.<br><br>\n",
     "To make the model ready for training, we need to pick three more things, as part of the $\\color{blue}{\\textbf{compilation}}$ step:<br>\n",
-    "• $\\color{blue}{\\textbf{An optimizer}}$—The mechanism through which the model will update itself based on the training data it sees, so as to improve its performance.<br>\n",
-    "• $\\color{blue}{\\textbf{A Loss Function}}$—How the model will be able to measure its performance on the training data, and thus how it will be able to steer itself in the right direction.<br>\n",
-    "• $\\color{blue}{\\textbf{Metrics to Monitor During Training and Testing}}$Here, we’ll only care about accuracy (the fraction of the images that were correctly classified)."
+    "• $\\color{blue}{\\textbf{An \\,\\,optimizer}}$—The mechanism through which the model will update itself based on the training data it sees, so as to improve its performance.<br>\n",
+    "• $\\color{blue}{\\textbf{A \\,\\,Loss \\,\\,Function}}$—How the model will be able to measure its performance on the training data, and thus how it will be able to steer itself in the right direction.<br>\n",
+    "• $\\color{blue}{\\textbf{Metrics \\,\\,to \\,\\,Monitor \\,\\,During \\,\\,Training \\,\\,and \\,\\,Testing}}$Here, we’ll only care about accuracy (the fraction of the images that were correctly classified)."
    ]
   },
   {
@@ -663,9 +663,9 @@
    "source": [
     "A tensor is defined by three key attributes:\n",
     "\n",
-    "• $\\color{blue}{\\textbf{Number of Axes (Rank)}}$—For instance, a rank-3 tensor has three axes, and a matrix has two axes. This is also called the tensor’s ndim in Python libraries such as NumPy or TensorFlow.<br>\n",
+    "• $\\color{blue}{\\textbf{Number\\,\\,of \\,\\,Axes \\,\\,(Rank)}}$—For instance, a rank-3 tensor has three axes, and a matrix has two axes. This is also called the tensor’s ndim in Python libraries such as NumPy or TensorFlow.<br>\n",
     "• $\\color{blue}{\\textbf{Shape}}$—This is a tuple of integers that describes how many dimensions the tensor has along each axis. For instance, the previous matrix example has shape (3, 5), and the rank-3 tensor example has shape (3, 3, 5). A vector has a shape with a single element, such as (5,), whereas a scalar has an empty shape, ().<br>\n",
-    "• $\\color{blue}{\\textbf{Data Type}}$(usually called <code>dtype</code> in Python libraries)—This is the type of the data contained in the tensor; for instance, a tensor’s type could be float16, float32, float64, uint8, and so on. In TensorFlow, you are also likely to come across string tensors."
+    "• $\\color{blue}{\\textbf{Data \\,\\,Type}}$(usually called <code>dtype</code> in Python libraries)—This is the type of the data contained in the tensor; for instance, a tensor’s type could be float16, float32, float64, uint8, and so on. In TensorFlow, you are also likely to come across string tensors."
    ]
   },
   {
@@ -941,8 +941,8 @@
    "cell_type": "markdown",
    "source": [
     "#### 2.2.8 Real–world examples of data tensors\n",
-    "• $\\color{blue}{\\textbf{Vector Data}}$—rank-2 tensors of shape (samples, features) where each samples is a vector of numerical attributes (\"features).<br>\n",
-    "• $\\color{blue}{\\textbf{Timeseries Data or Sequence Data}}$—rank-3 tensors of shape (samples, timesteps, freatures), where each sample is a sqeuence (of length timesteps) of feature vectors.<br>\n",
+    "• $\\color{blue}{\\textbf{Vector \\,\\,Data}}$—rank-2 tensors of shape (samples, features) where each samples is a vector of numerical attributes (\"features).<br>\n",
+    "• $\\color{blue}{\\textbf{Timeseries \\,\\,Data \\,\\,or \\,\\,Sequence \\,\\,Data}}$—rank-3 tensors of shape (samples, timesteps, freatures), where each sample is a sqeuence (of length timesteps) of feature vectors.<br>\n",
     "• $\\color{blue}{\\textbf{Images}}$—rank-4 tensors of shape (samples, height, width, channels) where each sample is a 2D grid of pixels, and each pixle is represented by a vector of values (\"channels\")<br>\n",
     "• $\\color{blue}{\\textbf{Video}}$—rank-5 tensors of shape (samples, frames, height, width, channels), where each sample is a sequence (of length frames) of images."
    ],
