Correction of text colors

--- a/3. Introductoin to Keras and TensorFlow.ipynb
+++ b/3. Introductoin to Keras and TensorFlow.ipynb
@@ -122,7 +122,7 @@
    "cell_type": "markdown",
    "source": [
     "First, low-level tensor manipulation—the infrastructure that underlies all modern machine learning. This translates to TensorFlow APIs:<br>\n",
-    "• $\\color{blue}{\\textbf{Tensors}}$ including special tensors that store the network’s state $\\color{blue}{\\textbf{variables}}$<br>\n",
+    "• <i><span style=\"color:blue\">Tensors</span></i> including special tensors that store the network’s state $\\color{blue}{\\textbf{variables}}$<br>\n",
     "• $\\color{blue}{\\textbf{Tensor}}$ $\\color{blue}{\\textbf{operation}}$ such as addition, relu, matmul<br>\n",
     "• $\\color{blue}{\\textbf{Backpropogation}}$a way to compute the gradient of mathematical expressions (handled in TensorFlow via the GradientTape object)"
    ],
