test of table formatting in Github

--- a/3. Introductoin to Keras and TensorFlow.ipynb
+++ b/3. Introductoin to Keras and TensorFlow.ipynb
@@ -1025,6 +1025,29 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "<h3><span style=\"color:black\">3.6. Anatomy of a Neural Network: Understanding Core Keras APIs</span></h3>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.6.1 Layers: The building blocks of deep learning\n",
+    "Different types of layers are appropriate for different tensor formats and different types of data processing.<br>\n",
+    "| Column 1       | Column 2     | Column 3     |<br>\n",
+    "| :------------- | :----------: | -----------: |<br>\n",
+    "|  Cell Contents | More Stuff   | And Again    |<br>\n",
+    "| You Can Also   | Put Pipes In | Like this \\| |<br>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
