Table to show which types of layers are processed by what types of processing (does the table show correctly?)

--- a/3. Introductoin to Keras and TensorFlow.ipynb
+++ b/3. Introductoin to Keras and TensorFlow.ipynb
@@ -1040,10 +1040,26 @@
    "source": [
     "#### 3.6.1 Layers: The building blocks of deep learning\n",
     "Different types of layers are appropriate for different tensor formats and different types of data processing.<br>\n",
-    "| Column 1       | Column 2     | Column 3     |<br>\n",
-    "| :------------- | :----------: | -----------: |<br>\n",
-    "|  Cell Contents | More Stuff   | And Again    |<br>\n",
-    "| You Can Also   | Put Pipes In | Like this \\| |<br>"
+    " <table>\n",
+    "  <tr>\n",
+    "    <th>\n",
+    "    <th>Vector Data</th>\n",
+    "    <th>Sequence Data</th>\n",
+    "    <th>Image</th>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th> Type\n",
+    "    <td>2D tensor (`samples, features)`</td>\n",
+    "    <td>3D tensor (`samples, timesteps, features`)</td>\n",
+    "    <td>4D tensor</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <th>Processed by\n",
+    "    <td>densely connected layers</td>\n",
+    "    <td>Recurreng layers such as LSTM or 1D convolution layer (Conv1D)</td>\n",
+    "    <td>2D convolutoin layers (`Conv2D`)</td>\n",
+    "  </tr>\n",
+    "</table>"
    ],
    "metadata": {
     "collapsed": false
