completion through section 3.6.2

--- a/3. Introductoin to Keras and TensorFlow.ipynb
+++ b/3. Introductoin to Keras and TensorFlow.ipynb
@@ -1049,17 +1049,153 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <th> Type\n",
-    "    <td>2D tensor (`samples, features)`</td>\n",
+    "    <td>2D tensor (`samples, features`)</td>\n",
     "    <td>3D tensor (`samples, timesteps, features`)</td>\n",
     "    <td>4D tensor</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <th>Processed by\n",
     "    <td>densely connected layers</td>\n",
-    "    <td>Recurreng layers such as LSTM or 1D convolution layer (Conv1D)</td>\n",
+    "    <td>Recurreng layers such as LSTM or 1D convolution layer (`Conv1D`)</td>\n",
     "    <td>2D convolutoin layers (`Conv2D`)</td>\n",
     "  </tr>\n",
     "</table>"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The base <span style=\"font-variant:small-caps;\">Layer</span> in Keras<br>\n",
+    "A simple API should have a single abstraction around which everything is centered. In Keras, that’s the Layer class. Everything in Keras is either a Layer or something that closely interacts with a Layer.\n",
+    "A Layer is an object that encapsulates some state (weights) and some computation (a forward pass). The weights are typically defined in a build()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [],
+   "source": [
+    "from tensorflow import keras\n",
+    "\n",
+    "class SimpleDense(keras.layers.Layer):\n",
+    "\n",
+    "    def __init__(self, units, activation=None):\n",
+    "        super().__init__()\n",
+    "        self.units = units\n",
+    "        self.activation = activation\n",
+    "\n",
+    "    def build(self, input_shape):\n",
+    "        input_dim = input_shape[-1]\n",
+    "        self.W = self.add_weight(shape = (input_dim, self.units),\n",
+    "                                 initializer=\"random_normal\")\n",
+    "        self.b = self.add_weight(shape = (self.units,), initializer = \"zeros\")\n",
+    "\n",
+    "    def call(self, inputs):\n",
+    "        y = tf.matmul(inputs, self.W) + self.b\n",
+    "        if self.activation is not None:\n",
+    "            y = self.activation(y)\n",
+    "        return y"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "All Keras layers inherit from the base <span style=\"font-variant:small-caps;\">Layer</span> class.<br>\n",
+    "Weight creation takes place in the `build()` method.<br>\n",
+    "`add_weight` is a shortcut method for creating weights. It is also possible to create standalone variables and assign them as layer attributes, like: `self.W = tf.Variable(tf.random.uniform(w_shape))`.<br>\n",
+    "We define the forward pass computation in the `call()` method.\n",
+    "\n",
+    "Once instantiated, a layer like this can be used just like a function, taking as input a TensorFlow tensor:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 32)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(2, 32)"
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_dense = SimpleDense(units=32, activation=tf.nn.relu)\n",
+    "input_tensor = tf.ones(shape=(2, 784))\n",
+    "output_tensor = my_dense(input_tensor)\n",
+    "print(output_tensor.shape)\n",
+    "(2, 32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Automatic Shape Inference:Building Layers on the Fly\n",
+    "Just like with LEGO bricks, you can only \"clip\" together layers that are compatible. The notion of layer compatibility here refers specifically to the fact that every layer will only accept input tensors of a certain shape and will return output tensors of a certain shape."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### 3.6.2 From Layers to Models\n",
+    "A deep-learning model is a graph of layers. In Keras, that’s the `Model` class. For now, you’ve only seen `Sequential` models (a subclass of `Model`), which are simple stack of layers, mapping a single input to a single output. But as you move forward, you’ll be exposed to a much broader variety of network topologies. Some common ones are:<br><br>\n",
+    "• Two-branch networks<br>• Multihead networks<br>• Residual connections\n",
+    "\n",
+    "There are generally two ways of building such models in Keras: you could directly subclass the `Model` class, or you could use the Functional API, which lets you do more with less code. We’ll cover both approaches in chapter 7."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The topology of a model defines a hypothesis space. You may remember that in chapter 1, we described machine learning as \"searching for useful representations of some input data, within a predefined space of possibilities, using guidance from a feedback signal.\" By choosing a network topology, you constrain your space of possibilities (hypothesis space) to a specific series of tensor operations, mapping input data to output data. What you’ll then be searching for is a good set of values for the weight tensors involved in these tensor operations."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Picking the right network architecture is more an art than a science; and although there are some best practices and principles you can rely on, only practice can help you become a proper neural-network architect. The next few chapters will both teach you explicit principles for building neural networks and help you develop intuition as to what works or doesn’t work for specific problems. You’ll build a solid intuition about what type of model architectures work for different kinds of problems, how to build these networks in practice, how to pick the right learning configuration, and how to tweak a model until it yields the results you want to see.\n"
    ],
    "metadata": {
     "collapsed": false
