--- a/4. Getting Started with Neural Networks: Classification and Regression.ipynb
+++ b/4. Getting Started with Neural Networks: Classification and Regression.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "$\\color{blue}{\\huge {\\text{4. Getting Started with Neural Networks:<br> Classification and Regression}}}$"
+    "$\\color{blue}{\\huge {\\text{4. Getting Started with Neural Networks: Classification and Regression}}}$"
    ]
   },
   {
